# b-vista

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md   SECURITY.md  bvista_structure.txt  pyproject.toml  requirements.txt  savecodes.ipynb  setup.cfg  setup.py  testing.ipynb
.github/workflows/: docker-publish.yml  pypi-publish.yml
backend/: app.py  config.py
backend/models/: correlation.py  data_manager.py  distribution_analysis.py  missing_data_types.py
backend/routes/: data_routes.py
backend/static/: config.py  file_handler.py
backend/utils/: helpers.py  logger.py
backend/websocket/: __init__.py  event_handlers.py  socket_manager.py
bvista/: __init__.py  notebook_integration.py  server_manager.py
bvista.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bvista/datasets/: __init__.py  testing_data.csv
bvista/frontend/: .gitignore
bvista_test_env_2/: pyvenv.cfg
docs/: features.md  installation.md
docs/usage/: websocket_events.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Layout.css  Layout.js  Sidebar.css  Sidebar.js
frontend/src/pages/: CorrelationMatrix.css  CorrelationMatrix.js  CustomHeader.js  DataCleaning.css  DataCleaning.js  DataTable.js  DescriptiveStats.css  DescriptiveStats.js  DistributionAnalysis.css  DistributionAnalysis.js  MissingDataAnalysis.css  MissingDataAnalysis.js  TypesOfMissingData.css  TypesOfMissingData.js
